--- a/Data Visualization.ipynb
+++ b/Data Visualization.ipynb
@@ -2,6 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<button onclick=\"$('.input, .prompt, .output_stderr, .output_error').toggle();\">Click to hide/show the code</button>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display_html\n",
+    "display_html(\"\"\"<button onclick=\"$('.input, .prompt, .output_stderr, .output_error').toggle();\">Click to hide/show the code</button>\"\"\", raw=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
@@ -717,7 +737,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## matchType\n",
+    "## MatchType\n",
     "\n",
     "The dataset contains more than 6 of the basic matchType, because it contains customize and event mode matches. So we considered these matches as outliers and drop them.\n"
    ]
@@ -862,6 +882,15 @@
     "# pair_data['class'] = pair_data['numGroups']//35\n",
     "# pair_data.head()\n",
     "top10_data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Top 10 relationship\n",
+    "\n",
+    "In this part，it shows the relationship between the features that has the top-10 highest correlations with 'winPlacePerc'"
    ]
   },
   {
@@ -1646,7 +1675,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.0"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
